First section nearly done

--- a/index.html
+++ b/index.html
@@ -21,5 +21,14 @@
        <li class="link"><a href="#">kontakt</a></li>
       </ul>
     </nav>
+    <section class="section1">
+      <div class="block1">
+      <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
+      <p class="p2">Nie wierz nam na słowo - sprawdź</p>
+      <button class="button1">oferta</button>
+      </div>
+    </section>
+    <section class="section2"></section>
+    <section class="section3"></section>
 </body>
 </html>
