--- a/index.html
+++ b/index.html
@@ -1,34 +1,85 @@
 <!DOCTYPE html>
 <html lang="pl-PL">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="reset.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <title>Moja firma</title>
-</head>
-<body>
-  <div class="container"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Moja firma</title>
+  </head>
+  <body>
+    <div class="container"></div>
     <nav class="navbar">
       <a class="logo" href="index.html">moja firma</a>
       <ul class="links-list">
-       <li class="link"><a href="#">o nas</a></li>
-       <li class="link"><a href="#">oferta</a></li>
-       <li class="link"><a href="#">kontakt</a></li>
+        <li class="link"><a href="#">o nas</a></li>
+        <li class="link"><a href="#">oferta</a></li>
+        <li class="link-disabled"><a href="#">kontakt</a></li>
       </ul>
     </nav>
     <section class="section1">
       <div class="block1">
-      <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
-      <p class="p2">Nie wierz nam na słowo - sprawdź</p>
-      <button class="button1">oferta</button>
+        <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
+        <p class="p2">Nie wierz nam na słowo - sprawdź</p>
+        <button class="button1">oferta</button>
       </div>
     </section>
-    <section class="section2"></section>
-    <section class="section3"></section>
-</body>
+    <section class="section2">
+      <h1 class="header1">Nasi specjaliści</h1>
+      <div class="emp">
+        <img
+          src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
+          class="emp-img"
+          alt="Adam Nowak"
+        />
+        <div class="emp-des">
+          Adam Nowak [Key Account Manager]
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
+            assumenda incidunt corporis hic optio quae rem architecto porro!
+            Nisi aperiam laborum minima illum voluptate et magni repudiandae
+            molestiae blanditiis vel numquam excepturi, officia expedita dolorem
+            corporis? Veniam similique odio sint rerum molestias rem quisquam
+            cumque ipsum.
+          </p>
+        </div>
+      </div>
+      <div class="emp">
+        <img
+          src="https://images.unsplash.com/photo-1543132220-3ec99c6094dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=80"
+          class="emp-img"
+          alt="Jan Kowalski"
+        />
+        <div class="emp-des">
+          Jan Kowalski [Sales Representative]
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
+            dolor corporis id natus? Necessitatibus, consectetur perspiciatis
+            nihil quidem sequi doloribus cumque eum autem sapiente iusto aperiam
+            esse similique atque tempora, enim dolores quae consequuntur maiores
+            impedit tenetur veritatis architecto. Praesentium adipisci, cum
+            sapiente laborum aspernatur harum?
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="section3">
+      <header class="header2">Czym zajmuje się nasza firma?</header>
+      <div class="parent">
+        <div class="child">Usługa 1</div>
+        <div class="child">Usługa 2</div>
+        <div class="child">Usługa 3</div>
+        <div class="child">Usługa 4</div>
+        <div class="child">Usługa 5</div>
+        <div class="child">Usługa 6</div>
+      </div>
+    </section>
+  </body>
 </html>
