--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container"></div>
     <nav class="navbar">
       <a class="logo" href="index.html">moja firma</a>
+      <div id="bars"><i class="fas fa-bars"></i></div>
       <ul class="links-list">
         <li class="link"><a href="#about">o nas</a></li>
         <li class="link"><a href="#offer">oferta</a></li>
@@ -77,8 +78,8 @@
     <footer class="foot">
       <h1 class="footer-txt">Nazwa firmy - wszelkie prawa zastrzeżone, 2019</h1>
       <ul class="foot-icons">
-      <il><i class="fab fa-instagram"></i></il>
-      <il><i class="fab fa-facebook-square"></i></div></il>
+        <li><i class="fab fa-instagram"></i></li>
+        <li><i class="fab fa-facebook-square"></i></div></li>
     </footer>
   </body>
 </html>
