--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="block1">
         <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
         <p class="p2">Nie wierz nam na słowo - sprawdź</p>
-        <button class="button1"><a href="#oferta">oferta</a></button>
+        <button class="button1"><a href="#offer">oferta</a></button>
       </div>
     </section>
     <section id="about" class="section2 section_pad">
@@ -78,8 +78,8 @@
     <footer class="foot">
       <h1 class="footer-txt">Nazwa firmy - wszelkie prawa zastrzeżone, 2019</h1>
       <ul class="foot-icons">
-        <li><i class="fab fa-instagram"></i></li>
-        <li><i class="fab fa-facebook-square"></i></div></li>
+        <li class="foot-ic"><i class="fab fa-instagram"></i></li>
+        <li class="foot-ic"><i class="fab fa-facebook-square"></i></div></li>
     </footer>
   </body>
 </html>
