added cointainer with margin auto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Moja firma</title>
   </head>
   <body>
-    <div class="container"></div>
     <nav class="navbar">
       <a class="logo" href="index.html">moja firma</a>
       <div id="bars"><i class="fas fa-bars"></i></div>
@@ -26,53 +25,59 @@
         <li class="link"><a href="#" class="disabled">kontakt</a></li>
       </ul>
     </nav>
-    <section class="section1 section_pad">
-      <div class="block1">
-        <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
-        <p class="p2">Nie wierz nam na słowo - sprawdź</p>
-        <button class="button1"><a href="#offer">oferta</a></button>
-      </div>
-    </section>
+      <section class="section1 section_pad">
+        <div class="container">
+          <div class="block1">
+            <p class="p1">Nasza firma oferuje najwyższej jakości produkty.</p>
+            <p class="p2">Nie wierz nam na słowo - sprawdź</p>
+          <button class="button1"><a href="#offer">oferta</a></button>
+          </div>
+        </div>
+      </section>
     <section id="about" class="section2 section_pad">
-      <h1 class="header1">Nasi specjaliści</h1>
-      <div class="employers">
-        <div class="emp">
-          <div class="emp-img1"></div>
-          <div class="emp-des">
-            <h2 class="header2">Adam Nowak [Key Account Manager]</h2>
-            <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              assumenda incidunt corporis hic optio quae rem architecto porro!
-              Nisi aperiam laborum minima illum voluptate et magni repudiandae
-              molestiae blanditiis vel numquam excepturi, officia expedita
-              dolorem corporis? Veniam similique odio sint rerum molestias rem
-              quisquam cumque ipsum.
-            </p>
+      <div class="container">
+        <h1 class="header1">Nasi specjaliści</h1>
+        <div class="employers">
+          <div class="emp">
+            <div class="emp-img1"></div>
+            <div class="emp-des">
+              <h2 class="header2">Adam Nowak [Key Account Manager]</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                assumenda incidunt corporis hic optio quae rem architecto porro!
+                Nisi aperiam laborum minima illum voluptate et magni repudiandae
+                molestiae blanditiis vel numquam excepturi, officia expedita
+                dolorem corporis? Veniam similique odio sint rerum molestias rem
+                quisquam cumque ipsum.
+              </p>
+            </div>
+          </div>
+          <div class="emp">
+            <div class="emp-img2"></div>
+            <div class="emp-des">
+            <h2 class="header2">Jan Kowalski [Sales Representative]<h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Inventore dolor corporis id natus? Necessitatibus, consectetur
+                perspiciatis nihil quidem sequi doloribus cumque eum autem
+                sapiente iusto aperiam esse similique atque tempora, enim dolores
+                quae consequuntur maiores impedit tenetur veritatis architecto.
+                Praesentium adipisci, cum sapiente laborum aspernatur harum?</p>
+            </div>
           </div>
         </div>
-        <div class="emp">
-          <div class="emp-img2"></div>
-          <div class="emp-des">
-          <h2 class="header2">Jan Kowalski [Sales Representative]<h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Inventore dolor corporis id natus? Necessitatibus, consectetur
-              perspiciatis nihil quidem sequi doloribus cumque eum autem
-              sapiente iusto aperiam esse similique atque tempora, enim dolores
-              quae consequuntur maiores impedit tenetur veritatis architecto.
-              Praesentium adipisci, cum sapiente laborum aspernatur harum?</p>
-          </div>
-        </div>
-      </div>
+     </div>
     </section>
     <section id="offer" class="section3 section_pad">
-      <h1 class="header3">Czym zajmuje się nasza firma?</h1>
-      <div class="parent">
-        <div class="child"><div class="dot"></div><p>Usługa 1</p><p class="new-txt">(nowość)</p></div>
-        <div class="child"><p>Usługa 2</p></div>
-        <div class="child"><p>Usługa 3</p></div>
-        <div class="child"><p>Usługa 4</p></div>
-        <div class="child"><p>Usługa 5</p></div>
-        <div class="child"><p>Usługa 6</p></div>
+      <div class="container">
+        <h1 class="header3">Czym zajmuje się nasza firma?</h1>
+        <div class="parent">
+          <div class="child"><div class="dot"></div><p>Usługa 1</p><p class="new-txt">(nowość)</p></div>
+          <div class="child"><p>Usługa 2</p></div>
+          <div class="child"><p>Usługa 3</p></div>
+          <div class="child"><p>Usługa 4</p></div>
+          <div class="child"><p>Usługa 5</p></div>
+          <div class="child"><p>Usługa 6</p></div>
+        </div>
       </div>
     </section>
     <footer class="foot">
